build(rdm-ui): 更新JavaFX及构建配置